<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="dnu.fpm.tsptw.ui.fragment.home.HomeViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/background">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_text_view"
            style="@style/Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:gravity="center"
            android:text="@string/home"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_24"
            app:cardBackgroundColor="@color/light_violet"
            app:cardCornerRadius="@dimen/radius_10"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/title_text_view"
            tools:layout_editor_absoluteX="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_24">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/time_text_view"
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.currentTime}"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView"
                    style="@style/Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_12"
                    android:text="@{viewModel.currentDate}"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/time_text_view" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/create_new_trip_button"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:background="@drawable/bg_rose_button"
                    android:paddingHorizontal="@dimen/padding_8"
                    android:text="@string/create_new_trip"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/time_text_view" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:gravity="center"
            android:text="@string/trips_for_today"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trips_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_12"
            android:visibility="@{viewModel.isEmptyScreenVisible?View.GONE:View.VISIBLE}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2"
            tools:listitem="@layout/item_trip" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/empty_list_image_view"
            style="@style/EmptyList"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginHorizontal="@dimen/margin_10"
            android:visibility="@{viewModel.isEmptyScreenVisible?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/RegularText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:gravity="center"
            android:text="@string/no_trips_for_today"
            android:visibility="@{viewModel.isEmptyScreenVisible?View.VISIBLE:View.GONE}"
            app:layout_constraintTop_toBottomOf="@id/empty_list_image_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
