<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_10"
        android:layout_marginVertical="@dimen/margin_6">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            app:cardBackgroundColor="?attr/cardBackgroundColor"
            app:cardCornerRadius="@dimen/radius_10"
            app:cardElevation="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_10"
                android:paddingVertical="@dimen/padding_12">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_10"
                    android:layout_weight="1"
                    android:textColorHint="?attr/strokeColor"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/text_input_box_stroke"
                    app:hintTextColor="?attr/strokeColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/latitude_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/latitude"
                        android:inputType="number"
                        android:textColor="?attr/editTextColor"
                        android:textColorHint="?attr/strokeColor" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_10"
                    android:layout_weight="1"
                    android:textColorHint="?attr/strokeColor"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/text_input_box_stroke"
                    app:hintTextColor="?attr/strokeColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/longitude_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/longitude"
                        android:inputType="number"
                        android:textColor="?attr/editTextColor"
                        android:textColorHint="?attr/strokeColor" />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/remove_image_view"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="@dimen/margin_10"
            android:src="@drawable/ic_remove"
            app:layout_constraintEnd_toEndOf="@id/card_view"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_new_point_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:background="@drawable/bg_rose_button"
            android:paddingHorizontal="@dimen/padding_8"
            android:paddingVertical="@dimen/padding_10"
            android:text="@string/add_new_point"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>